Run lint in build
Change-Id: I01330fecc2a18a32b31ed9f3ea37dc27aefdc2a8

--- a/.github/workflows/JetNews.yaml
+++ b/.github/workflows/JetNews.yaml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Build project
         working-directory: ${{ env.SAMPLE_PATH }}
-        run: ./gradlew spotlessCheck assembleDebug --stacktrace
+        run: ./gradlew spotlessCheck assembleDebug lintDebug --stacktrace
 
       - name: Upload build outputs (APKs)
         uses: actions/upload-artifact@v2
