Adds rest of workflows and triggers them
Change-Id: I6c15a186ef10480dfc1661dfa5e8e3cebcd38062

--- a/.github/workflows/Jetcaster.yaml
+++ b/.github/workflows/Jetcaster.yaml
@@ -1,17 +1,17 @@
-name: Jetsnack
+name: Jetcaster
 
 on:
   push:
     branches:
       - master
     paths:
-      - 'Jetsnack/**'
+      - 'Jetcaster/**'
   pull_request:
     paths:
-      - 'Jetsnack/**'
+      - 'Jetcaster/**'
 
 env:
-  SAMPLE_PATH: Jetsnack
+  SAMPLE_PATH: Jetcaster
 
 jobs:
   build:
